--- a/netflixProject/src/main/resources/application.yml
+++ b/netflixProject/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/springdb?serverTimezone=Asia/Seoul
+    url: jdbc:mysql://localhost:3306/netflixproject?serverTimezone=Asia/Seoul
     username: root
     password: 123456
 
