--- a/netfilxProject/src/main/resources/application.yml
+++ b/netfilxProject/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/netflixproject?serverTimezone=Asia/Seoul&jdbcCompliantTruncation=false
+    url: jdbc:mysql://localhost:3306/netflixproject?serverTimezone=Asia/Seoul&autoReconnect=true
     username: root
     password: 123456
+    
